# RealTimeSkinRendering

./: .gitignore  CMakeLists.txt  FindJPEG.cmake  FindOBJ.cmake  README.md  main.cpp
doc/: SkinRendering.tex
inc/: head_phong.hpp  head_realskin.hpp  parser.hpp  program_phong.hpp  program_realskin.hpp  shader_phong.hpp  shader_realskin.hpp
include/: camera.hpp  error.hpp  mesh.hpp  mesh_factory.hpp  mesh_gl.hpp  mesh_loader_obj.hpp  mesh_loader_off.hpp  parser.hpp  shader.hpp  shader_blur.hpp  shader_phong.hpp  shader_realskin.hpp  texture.hpp  texture_factory.hpp  texture_loader.hpp  texture_loader_jpeg.hpp  texture_loader_ppm.hpp  triangle.hpp  utils.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
sgl/: camera_device.hpp  camera_host.hpp  error.hpp  mesh_device.hpp  mesh_host.hpp  mesh_loader_obj.hpp  pipeline_device.hpp  renderable.hpp  shader_device.hpp  texture_device.hpp  texture_host.hpp  texture_loader_jpeg.hpp
shaders/: shader_blur.frag  shader_blur.vert  shader_phong.frag  shader_phong.vert  shader_realskin.frag  shader_realskin.vert
src/: CMakeLists.txt  camera.cpp  mesh.cpp  mesh_factory.cpp  mesh_gl.cpp  mesh_loader_obj.cpp  mesh_loader_off.cpp  parser.cpp  program_phong.cpp  program_realskin.cpp  shader.cpp  shader_blur.cpp  shader_phong.cpp  shader_realskin.cpp  texture.cpp  texture_factory.cpp  texture_loader_jpeg.cpp  texture_loader_ppm.cpp  triangle.cpp
